기용패트리
기용이는 귀용

--- a/WebContent/0_check/bed.html
+++ b/WebContent/0_check/bed.html
@@ -6,7 +6,7 @@
     </head>
     <body>
        <font color='red'> 
-           <div onclick='alert("눌렸음")'>표준을 따르지 않음</div>
+           <div onclick='alert("눌려짐")'>표준을 따르지 않음</div>
         </font>
     </body>
 </html>
