--- a/WebContent/0_check/good.html
+++ b/WebContent/0_check/good.html
@@ -5,7 +5,7 @@
    window.onload = funtion(){
 	   
 document.getElementById("txt").onclick=function(){
-    	 alert("확인");
+    	 alert("확인22");
    }
      }
 
